--- a/VRChat/28/1061528.html
+++ b/VRChat/28/1061528.html
@@ -77,9 +77,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "9O9f7ndHkSvcVcktjtytoaUFfX5TK5eF10JZBubXE84="></script>
+    "PK/r8/sDFa4rB4KJoDb2n0TDA6xYepAZP0sQYzrOrto="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"VRchat向け　星","description":"VRchat向けアクセサリ：星\nポリゴン数20のFBXファイルが入っています\n\nunityでのマテリアルをいじってよい感じにしてください\n\n商用利用・私的利用に対してご自由にお使いください\n大々的な再配布はお止めください","url":"https://booth.pm/ja/items/1061528","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/eaae416f-80ca-4582-baa6-17cd5c7d41ab/i/1061528/68158224-c2ff-465e-a26c-79bec11dab92_base_resized.jpg"}
     </script>
@@ -93,7 +93,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9O9f7ndHkSvcVcktjtytoaUFfX5TK5eF10JZBubXE84="></script>
+    nonce="PK/r8/sDFa4rB4KJoDb2n0TDA6xYepAZP0sQYzrOrto="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -151,7 +151,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               VRchat向け　星
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -187,6 +187,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -260,9 +262,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -515,7 +514,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
